<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morphidose</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Morphidose</string>
    <string name="registering">Registering...</string>
    <string name="wait">Please wait.</string>
    <string name="connect_wifi">To get started please connect to the internet by turning on
        your wifi or cellular data.</string>
    <string name="register_instructions">To register with Morphidose, please enter your hospital number below,
        and press the submit button.</string>
    <string name="hospitalNumber">Hospital Number</string>
    <string name="submit">Submit</string>
    <!--<string name="submit_number">Submit the hospital number</string>-->
    <!--<string name="question">\?</string>-->
    <string name="ok">OK</string>
    <string name="no_wifi">You currently have no internet connection. Please ensure you have a connection before trying again.</string>
    <string name="user_not_found">Sorry, we couldn\'t find that hospital number in the Morphidose system. Please check the number and try again.</string>
    <string name="no_prescription">You haven\'t been prescribed any medication on our system yet. Please check with your prescriber and try again.</string>
    <string name="error_registering">Sorry, there was an error while processing your data - let us try again.</string>
    <string name="dose_input">Morphidose Dose Input</string>
    <string name="register">Morphidose Register</string>
    <string name="dose_intro">You are ready to start logging doses of your breakthrough pain relief.</string>
    <string name="log_dose">Press the \"Submit Breakthrough Dose\" button every time you take a dose
        of your breakthrough medication. You will see a confirmation to verify that the dose has been logged.</string>
    <string name="dose_taken">Submit Breakthrough Dose</string>
    <string name="sending_dose">Sending dose...</string>
    <string name="breakthrough_dose">Breakthrough</string>
    <string name="regular_dose">Regular Dose</string>
    <string name="continue_registration">Continue</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="dose_submitted">You are about to submit a dose.</string>
    <string name="all_doses_sent">All submitted doses have been sent to your prescriber.</string>
    <string name="doses_to_send">IMPORTANT: You have some submitted doses stored on your device.
        Before your next appointment, please connect to wifi or turn on your
        cellular data to allow these doses to be sent to your prescriber.</string>
    <string name="submit_dose">Press this button to submit a dose of your breakthrough medication.</string>
    <string name="send_dose">Press confirm if you have taken a dose of your breakthrough medication,
        or cancel if the submit button was pressed in error.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dose_submitted_success">Dose submitted successfully!</string>
    <string name="cannot_verify_dose">You are not connected to the internet so we couldn\'t verify your latest doses.
        If you have recently had a dose change then the displayed doses may not be up to date.</string>
    <string name="cannot_verify_dose_title">Your Latest Doses Cannot be Verified</string>
    <string name="log_doses">Please log your breakthrough doses</string>
    <string name="getting_doses">We are just getting your latest doses.</string>
    <string name="formulation_error">Sorry, there was an error obtaining your dose.</string>

</resources>
