...
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/update_prescription"
        android:layout_height="70dp"
        android:layout_width="70dp"
        android:onClick="addDose"
        android:background = "@drawable/circle"
        android:src="@drawable/submit_button"
        android:contentDescription="@string/submit_dose"
...
