...
    android:text="@string/register_instructions"
    android:textColor="@color/white"
    android:textSize="@dimen/font_size"
    android:layout_marginBottom="@dimen/margin_between_p"/>

<EditText
    android:id="@+id/EditTextHospitalNumber"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:hint="@string/hospitalNumber"
    android:textColorHint="@color/white"
    android:textSize="@dimen/edit_text"
    android:textColor="@color/white"
    android:textStyle="italic"
    android:inputType="textNoSuggestions"
    android:layout_marginBottom="@dimen/margin_between_p"/>

<Button
    android:id="@+id/ButtonSubmitHospitalNumber"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:text="@string/submit"
    android:textSize="@dimen/button_size"
    android:textColor="@color/white"
    android:background = "@drawable/round_button"/>
...
